@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * admin module can now also work as a seperate ('virtual') network
  * get rid of complicated filter class system
  * nickserv is now "self-learning"
  * Reduce number of files generated by configure
